##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am,v 1.1 2004/10/13 14:18:13 e_arnold Exp $
##
## Copyright (C) 2004
##               Technical University Dresden
##               Department of Mathematics
##               Institute of Scientific Computing
##############################################################################

MAINTAINERCLEANFILES = Makefile.in adolc*.aux adolc*.dvi adolc*.log \
                       adolc*.toc *~

EXTRA_DIST           = adolc19.ps

