##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am,v 1.1 2004/10/13 14:18:13 e_arnold Exp $
##
## Copyright (C) 2004
##               Technical University Dresden
##               Department of Mathematics
##               Institute of Scientific Computing
##############################################################################

MAINTAINERCLEANFILES = Makefile.in *~

if ADDEXA
SUBDIRS              = clock gauss hessmat lufact ode sparse tapesave timing \
                       detexam helm lighthouse scal speelpenning taylor pow
endif
